@@ -17,7 +17,7 @@
 <table class="sventonHeader">
   <tr>
     <td>sventon subversion web client - <a class="sventonHeader" href="http://sventon.berlios.de" target="page">http://sventon.berlios.de</a></td>
-    <c:if test="${not empty instanceNames}">
+    <c:if test="${not empty instanceNames && fn:length(instanceNames) > 1}">
       <td align="right">
         <a class="sventonHeader" href="listinstances.svn">change repository</a>
       </td>
