@@ -1,4 +1,4 @@
 <p>
-See the <a href="http://svn.berlios.de/viewcvs/*checkout*/sventon/branches/releases/1.0/sventon/doc/changes.txt">change history</a> document for version details.
+See the <a href="http://svn.berlios.de/viewcvs/*checkout*/sventon/branches/releases/1.1/sventon/doc/changes.txt">change history</a> document for version details.
 </p>
 
