@@ -3,24 +3,24 @@
 </p>
 <table>
   <tr>
-    <th>Repository browser</th>
+    <th>Flattened directory</th>
+    <th>Thumbnail image view</th>
+    <th>Archive file view</th>
+  </tr>
+  <tr>
+    <td><a href="http://developer.berlios.de/dbimage.php?id=3258"><img width="150" height="100" alt="Flattened directory" src="http://developer.berlios.de/dbimage.php?id=3258"/></a></td>
+    <td><a href="http://developer.berlios.de/dbimage.php?id=3260"><img width="150" height="100" alt="Thumbnail image view" src="http://developer.berlios.de/dbimage.php?id=3260"/></a></td>
+    <td><a href="http://developer.berlios.de/dbimage.php?id=3255"><img width="150" height="100" alt="Archive file view" src="http://developer.berlios.de/dbimage.php?id=3255"/></a></td>
+  </tr>
+  <tr>
+    <th>File view</th>
     <th>File diff</th>
-    <th>Logs</th>
+    <th>Search logs</th>
   </tr>
   <tr>
-    <td><a href="http://developer.berlios.de/dbimage.php?id=2538"><img width="150" height="100" alt="Repository browser" src="http://developer.berlios.de/dbimage.php?id=2538"/></a></td>
-    <td><a href="http://developer.berlios.de/dbimage.php?id=2534"><img width="150" height="100" alt="File diff" src="http://developer.berlios.de/dbimage.php?id=2534"/></a></td>
-    <td><a href="http://developer.berlios.de/dbimage.php?id=2537"><img width="150" height="100" alt="Logs" src="http://developer.berlios.de/dbimage.php?id=2537"/></a></td>
-  </tr>
-  <tr>
-    <th>Show locks</th>
-    <th>Latest commit</th>
-    <th>&nbsp;</th>
-  </tr>
-  <tr>
-    <td><a href="http://developer.berlios.de/dbimage.php?id=2536"><img width="150" height="100" alt="Show locks" src="http://developer.berlios.de/dbimage.php?id=2536"/></a></td>
-    <td><a href="http://developer.berlios.de/dbimage.php?id=2535"><img width="150" height="100" alt="Latest commit" src="http://developer.berlios.de/dbimage.php?id=2535"/></a></td>
-    <td>&nbsp;</td>
+    <td><a href="http://developer.berlios.de/dbimage.php?id=3257"><img width="150" height="100" alt="File view" src="http://developer.berlios.de/dbimage.php?id=3257"/></a></td>
+    <td><a href="http://developer.berlios.de/dbimage.php?id=3256"><img width="150" height="100" alt="File diff" src="http://developer.berlios.de/dbimage.php?id=3256"/></a></td>
+    <td><a href="http://developer.berlios.de/dbimage.php?id=3259"><img width="150" height="100" alt="Search logs" src="http://developer.berlios.de/dbimage.php?id=3259"/></a></td>
   </tr>
 </table>
 
@@ -34,18 +34,19 @@
     <th>Archive file view</th>
   </tr>
   <tr>
-    <td><a href="http://developer.berlios.de/dbimage.php?id=2547"><img width="150" height="100" alt="Flattened directory" src="http://developer.berlios.de/dbimage.php?id=2547"/></a></td>
-    <td><a href="http://developer.berlios.de/dbimage.php?id=2549"><img width="150" height="100" alt="Thumbnail image view" src="http://developer.berlios.de/dbimage.php?id=2549"/></a></td>
-    <td><a href="http://developer.berlios.de/dbimage.php?id=2548"><img width="150" height="100" alt="Archive file view" src="http://developer.berlios.de/dbimage.php?id=2548"/></a></td>
+    <td><a href="http://developer.berlios.de/dbimage.php?id=3252"><img width="150" height="100" alt="Flattened directory" src="http://developer.berlios.de/dbimage.php?id=3252"/></a></td>
+    <td><a href="http://developer.berlios.de/dbimage.php?id=3250"><img width="150" height="100" alt="Thumbnail image view" src="http://developer.berlios.de/dbimage.php?id=3250"/></a></td>
+    <td><a href="http://developer.berlios.de/dbimage.php?id=3251"><img width="150" height="100" alt="Archive file view" src="http://developer.berlios.de/dbimage.php?id=3251"/></a></td>
   </tr>
   <tr>
     <th>File view</th>
     <th>File diff</th>
-    <th>&nbsp;</th>
+    <th>Search logs</th>
   </tr>
   <tr>
-    <td><a href="http://developer.berlios.de/dbimage.php?id=2551"><img width="150" height="100" alt="File view" src="http://developer.berlios.de/dbimage.php?id=2551"/></a></td>
-    <td><a href="http://developer.berlios.de/dbimage.php?id=2546"><img width="150" height="100" alt="File diff" src="http://developer.berlios.de/dbimage.php?id=2546"/></a></td>
+    <td><a href="http://developer.berlios.de/dbimage.php?id=3249"><img width="150" height="100" alt="File view" src="http://developer.berlios.de/dbimage.php?id=3249"/></a></td>
+    <td><a href="http://developer.berlios.de/dbimage.php?id=3253"><img width="150" height="100" alt="File diff" src="http://developer.berlios.de/dbimage.php?id=3253"/></a></td>
+    <td><a href="http://developer.berlios.de/dbimage.php?id=3254"><img width="150" height="100" alt="Search logs" src="http://developer.berlios.de/dbimage.php?id=3254"/></a></td>
     <td>&nbsp;</td>
   </tr>
 </table>
